correct position for homescreen popup on tablet, set translation string

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -789,8 +789,15 @@ ul.panel-body-wide {
   width: 200px;
   margin-left: -100px;
   .transition(opacity 1s ease);
+  &.bottom {
+    bottom: auto;
+    top: 0;
+    left: 45px;
+    margin-left: 0;
+  }
   &.visible {
     display: block;
+    z-index: 3000;
   }
   &.ng-enter,
   &.ng-leave.ng-leave-active {
